# cTTS

./: README.md  pyproject.toml  setup.cfg  setup.py  test.py
cTTS/: __init__.py
src/cTTS/: cTTS.py
