[metadata]
name = cTTS
version = 0.0.1
author = Thorsten Müller
author_email = MrThorstenM@gmx.net
description = Python client for using Coqui TTS server instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thorstenMueller/cTTS
project_urls =
    Bug Tracker = https://github.com/thorstenMueller/cTTS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src